# AI-ML-Bio-Projects

./: .gitignore  README.md  main.py  pyproject.toml
compare_optim/: run.ipynb
jax-practice/: practice.ipynb
