[project]
name = "ai-bio-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "evaluate>=0.4.6",
    "flax>=0.12.5",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jax[cuda12]>=0.9.1",
    "matplotlib>=3.10.8",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.3.0",
    "wandb>=0.25.1",
]
